2017-08-11  Enrico Schumann  <es@enricoschumann.net>

	* R/functions.R (title_case): add function; not
	yet exported

2017-06-21  Enrico Schumann  <es@enricoschumann.net>

	* DESCRIPTION (Version): Version: 0.1-8

	* R/functions.R (toHTML.data.frame): new method

2017-03-30  Enrico Schumann  <es@enricoschumann.net>

	* DESCRIPTION (Version): 0.1-7

	* vignettes/btable.Rnw: replace magic numbers

2016-12-16  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.1-6

	* DESCRIPTION (Description): expand description

2016-12-16  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.1-5

	* R/functions.R (char2num): remove function
	(expstr): remove function -- use 'strexp'
	instead

2016-11-30  Enrico Schumann  <es@enricoschumann.net>

	* inst/unitTests/ut_text.R: move all tests
	to a single file

2016-11-28  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.1-4

	* man/spaces.Rd: add man page

	* R/functions.R (spaces): rename 'nspace' to
	'spaces' and export the function

	* inst/unitTests/ut_text.R (test.spaces): add tests

2016-11-25  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.1-3

	* R/functions.R (HTMLdecode): add complete list
	of entities

2016-11-24  Enrico Schumann  <es@enricoschumann.net>

	* R/functions.R (HTMLdecode): add more entities

	* man/trim.Rd: remove mention of 'rmspace',
	which is no longer available; see ChangeLog of
	2016-03-31

2016-11-23  Enrico Schumann  <es@enricoschumann.net>

	* inst/unitTests/runTests.R: rewrite run script
	for unit tests; update unit tests

	* R/functions.R (pr_abbr): add outline of
	function 'pr_abbr' ("pretty abbreviate")

2016-10-17  Enrico Schumann  <es@enricoschumann.net>

	* NAMESPACE: import `utils::capture.output`

	* man/HTMLdecode.Rd: add man page

2016-09-15  Enrico Schumann  <es@enricoschumann.net>

	* R/functions.R (HTMLdecode): add function

2016-06-14  Enrico Schumann  <es@enricoschumann.net>
