@@ -2421,3 +2421,16 @@ title_case <- function(s, strict = FALSE, ignore = NULL) {
     unlist(lapply(spl, cap),
            use.names = !is.null(names(s)))
 }
+
+interp <- function(s, ...,
+                   delim = c("{", "}")) {
+    val <- list(...)
+    it <- if (is.null(names(val)))
+              seq_along(val)
+          else
+              names(val)
+    for (i in it)
+        s <- gsub(paste0(delim[1L], i, delim[2L]), val[[i]], s, fixed = TRUE)
+
+    s    
+}
