@@ -1,3 +1,8 @@
+2017-11-07  Enrico Schumann  <es@enricoschumann.net>
+
+	* R/functions.R (interp): new function; not
+	exported yet
+
 2017-08-11  Enrico Schumann  <es@enricoschumann.net>
 
 	* R/functions.R (title_case): add function; not
